# VMWiz

./: .backend.env  .backend.prod.env  .db.env  .db.prod.env  .env  .gitignore  .gitlab-ci.yml  .goreleaser.yml  .prod.env  .pve.env  CODEOWNERS  Cargo.toml  Dockerfile  README.md
certbot/: Dockerfile  crontab  renew.sh  store-env.sh
docker/: .backend.env  .db.env  .env  .gitignore  Caddyfile  docker-compose.prod.yml  docker-compose.yml  docker_login.sh  nginx.conf  notifier_config.yml
infra/: docker-compose.yml
proxy/: Dockerfile
proxy/templates/: default.conf.template
server/: Cargo.toml  Dockerfile
server/src/: error.rs  main.rs
server/src/admin/: mod.rs
server/src/netcenter/api/: mod.rs
server/templates/: 500.html.hbs  apply.html.hbs  ips.html.hbs
src/: main.rs
templates/: apply.html.hbs  success.html.hbs
vmwhiz-backend/: .air.toml  README.md  form.go  go.mod  go.sum  notifier.go  router.go  vmwhiz-backend.go
vmwhiz-frontend/: .eslintrc.js  README.md  package.json  vue.config.js
vmwhiz-frontend/src/: App.vue  main.js
vmwiz-backend/: .air.toml  Dockerfile.cli  Dockerfile.dev  Dockerfile.prod  form.go  go.mod  go.sum  main.go  notifier.go  sqlc.yaml  vmwhiz-backend.go  vwhostrc  vwrc
vmwiz-backend/actionlog/: actionlog.go
vmwiz-backend/auth/: auth.go
vmwiz-backend/cli/: cli.go
vmwiz-backend/config/: config.go
vmwiz-backend/form/: form.go
vmwiz-frontend/: .eslintrc.js  Dockerfile.dev  Dockerfile.prod  README.md  eslint.config.mjs  package-lock.json  package.json  vue.config.js
vmwiz-frontend-next/: eslint.config.mjs  package.json
(+105 files in other folders)
