[package]
name = "vsos-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.21"
reqwest = { version = "0.11.24", default-features = false }
rocket = { version = "0.5.0", features = ["tls"] }
rocket_dyn_templates = { version = "0.1.0", default-features = false, features = ["handlebars"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde-env = "0.1.1"
lettre = { version = "0.11.4", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
